--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    //onboarding colors
+    <color name="background">#F0F4F3</color>
+    <color name="buttontext">#3282B8</color>
+
+    //indicator color
+    <color name="inactive">#C4C4C4</color>
+    <color name="active">#3282B8</color>
 </resources>
