--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,2 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <style name="sugbo_eats">
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">#5F6368</item>
+    </style>
+    <!-- styles.xml -->
+    <style name="effortlessl">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+
+</resources>
